# tramoire

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json.tmp.15930.c5b160018c65
.github/workflows/: check.yml  release.yml
sample/TestNovel.tramoire/: project.json
sample/TestNovel.tramoire/scenes/: six-hours-out.md  the-sundowner.md  what-nadia-knew.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  entities.rs  frontmatter.rs  lib.rs  main.rs  model.rs  naming.rs  paths.rs  settings.rs
src/components/: Binder.tsx  Confirm.tsx  Entities.tsx  Menu.tsx  NewProject.tsx  Rail.tsx  SceneEditor.tsx  StatusBar.tsx  TopBar.tsx
src/lib/: autosave.ts  binder.test.ts  binder.ts  editor.ts  entities.test.ts  entities.ts  fields.test.ts  fields.ts  markdown.test.ts  markdown.ts  recent.ts  settings.ts  storage.ts  theme.ts
src/styles/: app.css  editor.css  tokens.css
