[package]
name = "tramoire"
version = "0.1.0"
description = "A local-first novel planning and writing application"
authors = ["ResofireV2"]
edition = "2021"
rust-version = "1.77.2"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name on Windows.
name = "tramoire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
